2007-01-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\winlib\WIN32FontInfo.m:
	* Source\winlib\GNUmakefile.preamble:
	* Source\win32\GNUmakefile.preamble:
	* Headers\winlib\WIN32FontInfo.h:
	Implement number of glyphs and covered characterset.
	Set maximumAdvancement.

2007-01-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/art/ftfont.m: Implement methods to get count of characters
	and characterset based on code by Yen-Ju Chen
	* Source/cairo/CairoFontEnumerator.m: Tidy layout
	* Source/cairo/CairoFaceInfo.m: ditto
	* Source/cairo/CairoFontInfo.m: ditto

2007-01-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/WIN32Server.m:
	* Source/win32/GNUmakefile:
	* Source/win32/w32_GLcontext.m:
	* Source/win32/w32_GLformat.m:
	* Headers/win32/WIN32OpenGL.h:
	OpenGL support patch by: Xavier Glattard <xavier.glattard@free.fr>.

2007-01-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\winlib\WIN32FontInfo.m: Attempt to make unicode clean
	* Source\winlib\WIN32FontEnumerator.m: ditto
	* Source\win32\WIN32Server.m: Implement -windowlist method.

2007-01-15  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerWindow.m ([XGServer -orderwindow:::]): Set
	icon hints regardless of window manager (patch #5434 from Yen-Ju
	Chen).

2007-01-14 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGGLContext.m: Fixup coordinates of subwindow for
	bug report by Xavier Glattard.

2006-12-31 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/cairo/CairoGState.m (-setOffset:, -DPSinitmatrix): Use
	cairo functions to handle offset.
	* Source/cairo/CairoGState.m (-GSCurrentCTM): Changed order of
	transformations. 
	* Source/cairo/CairoGState.m (-compositeGState:...fraction:):
	Corrected cases for flipped surface.

2006-12-31 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac:  Explicitly add freetype libs and flags when building
	cairo, in case the cairo config stuff has left them out.
	Should fix bug #18508
	* configure: regenerate
