@@ -1,3 +1,8 @@
+2007-02-08 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/winlib/WIN32FontInfo.m:
+	Fix error calculating advancement.
+
 2007-01-31 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source\winlib\WIN32FontInfo.m:
